--- a/src/lib/style/mixins.less
+++ b/src/lib/style/mixins.less
@@ -1,5 +1,6 @@
 @color-red: #fc4548;
 @color-white: #fff;
+@color-placeholder: #c8c8c8;
 
 @text-tiny-font-size: 10px;
 @text-tiny-line-height: 14px;
